Fix text overflow gradient bug on Safair for visual projects

--- a/public/stylesheets/visual.css
+++ b/public/stylesheets/visual.css
@@ -32,7 +32,7 @@ img{
 	width: 100%;
 	height: auto;
 	margin-left: 5%;
-	margin-top: 100px;
+	margin-top: 120px;
 }
 
 h1{
@@ -71,15 +71,13 @@ p{
     left: 0;
     height: 60px;
     width: 100%;
-    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(255,255,255,1) 70%);
-    margin-top: -10px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.001), rgba(255,255,255,1) 100%);
 }
 
 .content p {
-	max-height: 280px;
+	max-height: 250px;
 	margin-bottom: 0;
 	padding-bottom: 60px;
-	box-sizing: border-box;
 }
 
 .background{
